--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
 
 <script>
   var spec = {
-    'Evotor - Partner API': 'http://localhost/swagger/v1/inventory/market-to-partner.json',
-    'Managing user & Billing': 'http://localhost/swagger/v1/inventory/marketAdmin-to-partner.json',
-    'Receipts - online': 'http://localhost/swagger/v1/inventory/receipt.json',
-    '1C': 'http://localhost/swagger/v1/inventory/1c.json',
-    'Product search': 'http://localhost/swagger/v1/inventory/product-search.json',
-    'API for smart terminal': 'http://localhost/swagger/v1/inventory/forST.json'
+    'Evotor - Partner API': 'https://api.evotor.ru/docs/v1/inventory/market-to-partner.json',
+    'Managing user & Billing': 'https://api.evotor.ru/docsv1/inventory/marketAdmin-to-partner.json',
+    'Receipts - online': 'https://api.evotor.ru/docs/v1/inventory/receipt.json',
+    '1C': 'https://api.evotor.ru/docs/v1/inventory/1c.json',
+    'Product search': 'https://api.evotor.ru/docs/v1/inventory/product-search.json',
+    'API for smart terminal': 'https://api.evotor.ru/docs/v1/inventory/forST.json'
   }
   var sel = $('#input_baseUrl');
   $.each(spec,function(key,val){
