--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       if (url && url.length > 1) {
         url = decodeURIComponent(url[1]);
       } else {
-        url = "http://localhost/swagger/v1/inventory/market-to-partner.json";
+        url = "https://api.evotor.ru/docs/v1/inventory/marketAdmin-to-partner.json";
       }
 
       hljs.configure({
