--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
   <!-- Some basic translations -->
   <script src='lang/translator.js' type='text/javascript'></script>
-  <!-- <script src='lang/ru.js' type='text/javascript'></script> -->
+  <script src='lang/ru.js' type='text/javascript'></script>
   <!-- <script src='lang/en.js' type='text/javascript'></script> -->
 
   <script type="text/javascript">
