Описание user manegement and billing

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
         },
         docExpansion: "none",
         apisSorter: "alpha",		
-        jsonEditor: false,
+        jsonEditor: true,
         defaultModelRendering: 'schema',
-        showRequestHeaders: false
+        showRequestHeaders: true
       });
 	  
       window.swaggerUi.load();
