Hid "API for smart terminal"

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
     'Managing user & Billing': 'https://api.evotor.ru/docs/v1/inventory/marketAdmin-to-partner.json',
     'Receipts - online': 'https://api.evotor.ru/docs/v1/inventory/receipt.json',
     '1C': 'https://api.evotor.ru/docs/v1/inventory/1c.json',
-    'Product search': 'https://api.evotor.ru/docs/v1/inventory/product-search.json',
-    'API for smart terminal': 'https://api.evotor.ru/docs/v1/inventory/forST.json'
+    'Product search': 'https://api.evotor.ru/docs/v1/inventory/product-search.json'
+    <!--'API for smart terminal': 'https://api.evotor.ru/docs/v1/inventory/forST.json'-->
   }
   var sel = $('#input_baseUrl');
   $.each(spec,function(key,val){
