JSON selector naming

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 <script>
   var spec = {
     'Вызовы Эвотор к API Партнера': 'https://api.evotor.ru/docs/v1/evotor-to-partner.json',
-    'Вызовы Партнера к API Эвотор': 'https://api.evotor.ru/docs/v1/partner-to-evotor.json'
+    'REST API Эвотор': 'https://api.evotor.ru/docs/v1/partner-to-evotor.json'
     /*'Evotor - Partner API': 'https://api.evotor.ru/docs/v1/inventory/market-to-partner.json',
     'Managing user & Billing': 'https://api.evotor.ru/docs/v1/inventory/marketAdmin-to-partner.json',
     'Receipts - online': 'https://api.evotor.ru/docs/v1/inventory/receipt.json',
