--- a/redoc/index.html
+++ b/redoc/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 	<nav>
-      <header> <a href="/redoc"><img alt="API Эвотор" width="152" height="45" src="/docs/redoc/logo.svg"></a> </header>
+      <header> <a href="/docs/redoc"><img alt="API Эвотор" width="152" height="45" src="/docs/redoc/logo.svg"></a> </header>
       <template is="dom-bind" id="specs">
         <form id="schema-url-form" is="iron-form">
           <vaadin-combo-box-light id="spec-input" items="[[specs]]" allow-custom-value>
@@ -20,8 +20,8 @@
       </template>
     </nav>
   
-    <redoc spec-url='https://api.evotor.ru/docs/evotor-to-partner.json'></redoc>
-	<script src="https://api.evotor.ru/docs/main.js"> </script>
+    <redoc spec-url='/docs/redoc/evotor-to-partner.json'></redoc>
+	<script src="/docs/redoc/main.js"> </script>
     <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
   </body>
 </html>
