--- a/redoc/index.html
+++ b/redoc/index.html
@@ -19,8 +19,7 @@
         </form>
       </template>
     </nav>
-  
-    <redoc spec-url='/docs/redoc/evotor-to-partner.json'></redoc>
+    <redoc scroll-y-offset="body > nav" spec-url='/docs/redoc/evotor-to-partner.json' lazy-rendering></redoc>
 	<script src="/docs/redoc/main.js"> </script>
     <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
   </body>
