--- a/redoc/index.html
+++ b/redoc/index.html
@@ -2,13 +2,15 @@
 <html>
   <head>
     <title>API Эвотор</title>
+    <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
+    <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.vaadin.com/vaadin-core-elements/latest/webcomponentsjs/webcomponents-lite.min.js"></script>
     <link rel="import" href="https://cdn.vaadin.com/vaadin-core-elements/master/vaadin-combo-box/vaadin-combo-box-light.html">
   </head>
   <body>
-	<nav>
+    <nav>
       <header> <a href="/docs/redoc"><img alt="API Эвотор" width="152" height="45" src="/docs/redoc/logo.svg"></a> </header>
       <template is="dom-bind" id="specs">
         <form id="schema-url-form" is="iron-form">
@@ -20,7 +22,7 @@
       </template>
     </nav>
     <redoc scroll-y-offset="body > nav" spec-url='/docs/redoc/evotor-to-partner.json' lazy-rendering></redoc>
-	<script src="/docs/redoc/main.js"> </script>
+    <script src="/docs/redoc/main.js"> </script>
     <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
   </body>
 </html>
