--- a/redoc/index.html
+++ b/redoc/index.html
@@ -6,11 +6,11 @@
     <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.vaadin.com/vaadin-core-elements/latest/webcomponentsjs/webcomponents-lite.min.js"></script>
-    <link rel="import" href="https://cdn.vaadin.com/vaadin-core-elements/master/vaadin-combo-box/vaadin-combo-box-light.html">
+    <!--<script src="https://cdn.vaadin.com/vaadin-core-elements/latest/webcomponentsjs/webcomponents-lite.min.js"></script>
+    <link rel="import" href="https://cdn.vaadin.com/vaadin-core-elements/master/vaadin-combo-box/vaadin-combo-box-light.html">-->
   </head>
   <body>
-    <nav>
+    <!--<nav>
       <header> <a href="/docs/redoc"><img alt="API Эвотор" width="152" height="45" src="images/logo.svg"></a> </header>
       <template is="dom-bind" id="specs">
         <form id="schema-url-form" is="iron-form">
@@ -21,8 +21,45 @@
         </form>
       </template>
     </nav>
-    <redoc scroll-y-offset="body > nav" spec-url='/docs/redoc/evotor-rest-api.yaml' lazy-rendering></redoc>
-    <script src="/docs/redoc/main.js"> </script>
+    <redoc scroll-y-offset="body > nav" spec-url='/docs/redoc/evotor-rest-api.yaml' lazy-rendering></redoc>-->
+	<nav>
+      <ul id="links_container">
+      </ul>
+    </nav>
+
+    <redoc scroll-y-offset="body > nav"></redoc>
+    <!--<script src="/docs/redoc/main.js"> </script>-->
     <script src="https://rebilly.github.io/ReDoc/releases/latest/redoc.min.js"> </script>
+	<script>
+      // list of APIS
+      var apis = [
+        {
+          name: 'Evotor REST API',
+          url: 'https://api.evotor.ru/docs/redoc/evotor-rest-api.yaml'
+        },
+        {
+          name: 'Evotor Callbacks',
+          url: 'https://api.evotor.ru/docs/redoc/evotor-callbacks.yaml'
+        }
+      ];
+
+      // initially render first API
+      Redoc.init(apis[0].url);
+
+      function onClick() {
+        var url = this.getAttribute('data-link');
+        Redoc.init(url);
+      }
+
+      // dynamically building navigation items
+      var $list = document.getElementById('links_container');
+      apis.forEach(function(api) {
+        var $listitem = document.createElement('li');
+        $listitem.setAttribute('data-link', api.url);
+        $listitem.innerText = api.name;
+        $listitem.addEventListener('click', onClick);
+        $list.appendChild($listitem);
+      });
+    </script>
   </body>
 </html>
