--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
 	<nav>
-	  <header> <a href="/docs/redoc"><img alt="API Эвотор" width="152" height="45" src="images/logo.svg"></a> </header>
+	  <header> <a href="/docs"><img alt="API Эвотор" width="152" height="45" src="images/logo.svg"></a> </header>
       <ul id="links_container">
       </ul>
     </nav>
@@ -19,11 +19,11 @@
       var apis = [
         {
           name: 'Evotor REST API',
-          url: 'https://api.evotor.ru/docs/redoc/evotor-rest-api.yaml'
+          url: 'https://api.evotor.ru/docs/evotor-rest-api.yaml'
         },
         {
           name: 'Evotor Callbacks',
-          url: 'https://api.evotor.ru/docs/redoc/evotor-callbacks.yaml'
+          url: 'https://api.evotor.ru/docs/evotor-callbacks.yaml'
         }
       ];
 
