Sections' names fixed

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	<script>
       var apis = [
         {
-          name: 'Evotor REST API',
+          name: 'REST API облака Эвотор',
           url: 'https://api.evotor.ru/docs/evotor-rest-api.yaml'
         },
         {
-          name: 'Evotor Callbacks',
+          name: 'Протокол исходящих запросов',
           url: 'https://api.evotor.ru/docs/evotor-callbacks.yaml'
         }
       ];
