--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 	<script>
       var apis = [
         {
-          name: 'REST API облака Эвотор',
+          name: 'Запросы к облаку Эвотор',
           url: 'https://api.evotor.ru/docs/evotor-rest-api.yaml'
         },
         {
-          name: 'Протокол исходящих запросов',
+          name: 'Запросы к стороннему сервису',
           url: 'https://api.evotor.ru/docs/evotor-callbacks.yaml'
         }
       ];
