--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 	<nav>
 	  <header> <a href="/docs"><img alt="API Эвотор" width="152" height="45" src="images/logo.svg"></a> </header>
       <div class="topnav" id="myTopnav">
-        <a href="https://developer.evotor.ru/" target="_blank">Документация</a>
+        <a href="https://developer.evotor.ru/docs" target="_blank">Документация</a>
         <a href="https://api.evotor.ru/docs">Эвотор REST API</a>
         <a href="https://github.com/evotor/device-app" target="_blank">SDK смарт-терминала</a>
       </div>
