--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="topnav" id="myTopnav">
         <a href="https://developer.evotor.ru/docs" target="_blank">Документация</a>
         <a href="https://api.evotor.ru/docs">Эвотор REST API</a>
-        <a href="https://github.com/evotor/device-app" target="_blank">SDK смарт-терминала</a>
+        <a href="https://developer.evotor.ru/docs/doc_developer_mode.html" target="_blank">SDK смарт-терминала</a>
       </div>
     </nav>
     <redoc scroll-y-offset="body > nav"></redoc>
