--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <a href="https://developer.evotor.ru/docs" target="_blank">Документация</a>
         <a href="https://api.evotor.ru/docs">Эвотор REST API</a>
         <a href="https://developer.evotor.ru/docs/doc_java_integration_library_connection.html" target="_blank">SDK смарт-терминала</a>
+        <a href="https://t.me/evostore_developers" target="_blank">Информация об обновлениях</a>
       </div>
     </nav>
     <redoc scroll-y-offset="body > nav"></redoc>
