--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
     background-color: #4CAF50;
     color: white;
     }
+
+    /*Hide version and download button*/
+
+    div.api-info-wrapper span.api-info-version {
+    display: none;
+    }
+
+    div.api-info-wrapper p.download-openapi {
+    display: none;
+    }
     </style>
   </head>
   <body>
